--- a/math3.html
+++ b/math3.html
@@ -39,7 +39,12 @@
     let pwd2 = 'stROmBoLi'
 
     // Add your code here
-
+    let weightComparison;
+    let heightComparison;
+    let pwdMatch;
+    weightComparison = (eleWeight < mouseWeight);
+    heightComparison = (ostrichHeight > duckHeight);
+    pwdMatch = (pwd1 === pwd2);
     // Don't edit the code below here!
 
     const section = document.querySelector('section');
